--- a/_posts/2016-05-10-currying.markdown
+++ b/_posts/2016-05-10-currying.markdown
@@ -117,9 +117,7 @@ Nice, we can then use this new `english_check` function, and pass it to the `fil
 var misspelled = _.filter(article, english_check);
 {% endcapture %}
 {% capture ruby %}
-misspelled = article.select do |word|
-  english_check.call(word)
-end
+misspelled = article.select &english_check
 {% endcapture %}
 {% capture elixir %}
 misspelled = article |> Enum.filter(english_check)
