--- a/_posts/2016-05-10-currying.markdown
+++ b/_posts/2016-05-10-currying.markdown
@@ -2,6 +2,7 @@
 layout: post
 title:  Currying - Spice Things Up
 categories: functional programming
+audio: true
 ---
 
 > What is currying and is it really **hot**?
